chandeliers-lus/tests/fail/ui/causality/redef-var-vv.rs
chandeliers_lus::decl! {
    node foo() returns ();
    var a : int; a : int;
    let a = 1; tel
}

fn main() {}
