chandeliers-lus/tests/fail/ui/causality/redef-var-vv.stderr
error: Variable a is declared twice in node foo
 --> tests/fail/ui/causality/redef-var-vv.rs:3:18
  |
3 |     var a : int; a : int;
  |                  ^
